--- a/server/www/index.html
+++ b/server/www/index.html
@@ -90,8 +90,14 @@ body {
 <script src="js/jquery-ui-1.10.1.custom.js"></script>
 <script>
 $(function() {
-  var url = "ws://" + window.location.host + "/";
-  websocket = new WebSocket(url);
+  var websocket = new WebSocket("ws://" + window.location.host + "/");
+  var animations;
+  var readyToPlay = false;
+  var playing = false;
+  var currentAnimation;
+  var currentIndex = false;
+  
+  // Websocket ----------------------------------------------------------
   websocket.onopen = function(ev) {
     $("#serverstatus").text("Connected");
   };
@@ -102,14 +108,20 @@ $(function() {
     var msg = JSON.parse(ev.data);
     switch (msg.type) {
       case 'pong':
-        $("#pingdiv").text("Pong");
+        $("#pingdiv").text("Ping... Pong");
+        window.setTimeout(function() { $("#pingdiv").text(''); }, 2000);
         break;
       case 'animationlist':
         $("#animationlist").empty();
+        animations = msg.animations;
         var length = msg.animations.length;
         for (var i = 0; i < length; i++) {
-          $("#animationlist").append('<li class="ui-state-default ui-corner-all"><div class="handle"><span class="ui-icon ui-icon-carat-2-n-s"></span></div>' + msg.animations[i].title + '</li>');
+          msg.animations.id = i;
+          $("#animationlist").append('<li id="animation' + i +  '" class="ui-state-default ui-corner-all"><div class="handle"><span class="ui-icon ui-icon-carat-2-n-s"></span></div>' + msg.animations[i].title + '</li>');
         }
+        break;
+      case 'error':
+        alert("Server error: " + msg.message);
         break;
       default:
         alert('Unrecognized server message: ' + ev.data);
@@ -120,42 +132,116 @@ $(function() {
     $("#serverstatus").text("Error: " + ev.data);
   };
 
+  // Animation list -----------------------------------------------
+  var loadAnimation = function(index) {
+    currentAnimation = animations[index];
+    $("#currentanimationpos").progressbar('value', false);
+    $("#playbutton span").removeClass('ui-icon-stop');
+    $("#playbutton span").addClass('ui-icon-play');
+    $("#playbutton").addClass("ui-state-disabled");
+    $("#audioplayer").attr("src", currentAnimation.music);
+    $("#audioplayer")[0].load();
+    $("#currentanimationtitle").text(currentAnimation.title);
+    readyToPlay = false;
+    playing = false;
+  };
+
   $("#animationlist")
     .sortable({ handle: ".handle"})
     .selectable({ 
       tolerance: 'fit',
-      selected: function(e,u) { $(u.selected).addClass('ui-state-active'); },
+      selected: function(e,u) {
+        $(u.selected).addClass('ui-state-active'); 
+        currentIndex = parseInt(u.selected.id.substring(9, u.selected.id.length), 10)
+        if (playing == false) {
+          loadAnimation(currentIndex);
+        }
+      },
       unselected: function(e,u) { $(u.unselected).removeClass('ui-state-active'); }
     })
     //.find("li")
     //  .addClass("ui-corner-all")
     //  .prepend("<div class='handle'><span class='ui-icon ui-icon-carat-2-n-s'></span></div>");
-  $("#playbutton, #refreshbutton")
+  $("#refreshbutton")
+    .hover(
+      function() { $(this).addClass("ui-state-hover");},
+      function() {$(this).removeClass("ui-state-hover");}
+    )
+    .mousedown(function() { $(this).addClass("ui-state-active"); })
+    .mouseup(function() { $(this).removeClass("ui-state-active"); })
+    .click(function() {
+      websocket.send(JSON.stringify({type:"getanimations"})); 
+      $("#animationlist").empty();
+    });
+
+  // Audio player---------------------------------------------------
+  $("#audioplayer").bind('play', function() { 
+    //alert('Play'); 
+    console.log("play " + animations.indexOf(currentAnimation));
+    websocket.send(JSON.stringify({type:"play", index: animations.indexOf(currentAnimation)}));
+  });
+  $("#audioplayer").bind('canplaythrough', function() { 
+    readyToPlay = true;
+    $("#playbutton").removeClass('ui-state-disabled');
+    $("#currentanimationpos").progressbar('option', 'max', $("#audioplayer")[0].duration);
+    $("#currentanimationpos").progressbar('value', 0);
+    console.log("Can play through");
+  });
+  $("#audioplayer").bind('timeupdate', function() {
+    //$("#currentanimationpos").progressbar('option', {value: $("#audioplayer")[0].currentTime});
+    $("#currentanimationpos").progressbar('value', $("#audioplayer")[0].currentTime);
+  });
+  $("#playbutton")
     .hover(
       function() {
-        $(this).addClass("ui-state-hover");
+        if (readyToPlay) {
+          $(this).addClass("ui-state-hover");
+        }
       },
       function() {
         $(this).removeClass("ui-state-hover");
       }
     )
     .mousedown(function() {
-      $(this).addClass("ui-state-active");
+      if (readyToPlay) {
+        $(this).addClass("ui-state-active");
+      }
     })
     .mouseup(function() {
-      $(this).removeClass("ui-state-active");
+      //$(this).removeClass("ui-state-active");
     })
-  $("#currentanimationpos").progressbar({value: 20});
+    .click(function() {
+      if (playing == false) {
+        if (readyToPlay) {
+          $("#audioplayer")[0].play();
+          $("#playbutton span").removeClass('ui-icon-play');
+          $("#playbutton span").addClass('ui-icon-stop');
+          playing = true;
+        }
+      } else {
+        $("#audioplayer")[0].pause();
+        $("#audioplayer")[0].currentTime = 0;
+        $("#playbutton span").removeClass('ui-icon-stop');
+        $("#playbutton span").addClass('ui-icon-play');
+        playing = false;
+
+        websocket.send(JSON.stringify({type:"stop"}));
+
+        // Load the currently selected animation
+        if (animations[currentIndex] != currentAnimation) {
+          loadAnimation(currentIndex);
+        }
+      }
+    })
+  $("#currentanimationpos").progressbar({value: 0, max: 1});
+
+  // Configuration tab -------------------------------------------
   $("#tabs").tabs();
   $("#lagslider").slider({value: [50]});
   $("#pingbutton").button();
   $("#pingbutton").click(function() {
     websocket.send(JSON.stringify({type:"ping"}));
     $("#pingdiv").text("Ping...");
-  });
-  $("#refreshbutton").click(function() {
-    websocket.send(JSON.stringify({type:"getanimations"})); 
-    $("#animationlist").empty();
   });
 });
 </script>
@@ -171,9 +257,10 @@ $(function() {
     <div id="refreshbutton" class="ui-corner-all ui-state-default"><span class="ui-icon ui-icon-refresh"></span></div>
     <ul id="animationlist" class="ui-widget"></ul> 
     <div id="playercontrols" class="ui-corner-all ui-state-default">
-      <div id="playbutton" class="ui-corner-all ui-state-default"><span class="ui-icon ui-icon-play"></span></div>
+      <audio id="audioplayer" preload="auto"></audio>
+      <div id="playbutton" class="ui-corner-all ui-state-default ui-state-disabled"><span class="ui-icon ui-icon-play"></span></div>
       <div id="currentanimationcontainer">
-        <div id="currentanimationtitle">Animation 1</div>
+        <div id="currentanimationtitle"></div>
         <div id="currentanimationpos"></div>
       </div>
     </div>
