Last minute changes and bugfixes

--- a/server/www/index.html
+++ b/server/www/index.html
@@ -34,7 +34,7 @@
     <table id="configtable">
     <tr>
       <td class="config-label">Server Status:</td>
-      <td class="config-value"><div id="serverstatus"></div>Not connected</td>
+      <td class="config-value"><div id="serverstatus"></div></td>
     </tr><tr>
       <td class="config-label">Lag:</td>
       <td class="config-value"><div id="lagslider"></div></td>
